libdca-0.0.3 Thu Apr  5 20:48:56 EEST 2007

Fix for pointer aliasing.
Build system rework.
FreBSD compile fix.
Changed library name to libdca (was formerly known as libdts).
Removed Debian packaging files now maintained separately.

libdca-0.0.2 Sun Feb 29 12:45:21 CET 2004

Support for high frequencies vector quantization.
Improved build system.
Debian packaging files.

dcadec-0.0.1 Sun Feb 8 21:49:17 CET 2004

First public release of libdca (then known as libdts),
a DTS Coherent Acoustics decoder based
on the publicly available ETSI specification (ETSI 102 114 v1.2.1).

Code based on a52dec-0.7.4